styles 경로 수정(폴더 생성), 절대 경로 사용(src폴더를 루트로 적용)

--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ REACT_APP_PORT=4000;
 REACT_APP_HOST="localhost";
 REACT_APP_USER="root";
 REACT_APP_PASSWORD="1234";
-REACT_APP_DB="mydb";
+REACT_APP_DB="summDB";
