--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
   "name": "summ_2022",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "mysql": "^2.18.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.0",
+    "react-bootstrap": "^2.1.1",
     "react-dom": "^17.0.2",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2"
