서버 키 변경

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_PORT=4000;
-REACT_APP_HOST="localhost";
+REACT_APP_PORT=3306;
+REACT_APP_HOST="54.180.116.0";
 REACT_APP_USER="root";
-REACT_APP_PASSWORD="1234";
+REACT_APP_PASSWORD="summ2022!";
 REACT_APP_DB="summDB";
