--- a/package.json
+++ b/package.json
@@ -3,22 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3000/",
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "body-parser": "^1.19.1",
     "bootstrap": "^5.1.3",
-    "cors": "^2.8.5",
+    "child-process": "^1.0.2",
     "express": "^4.17.2",
-    "mysql": "^2.18.1",
+    "install": "^0.13.0",
+    "path-browserify": "^1.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "styled-components": "^5.3.3",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
@@ -44,5 +47,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-node-externals": "^3.0.0"
+  },
+  "browser": {
+    "child_process": false
   }
 }
